// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should work 1`] = `
{
  "instances": [
    {
      "info": {
        "version": "1.0.0",
      },
      "path": "foo-instance",
    },
    {
      "info": {
        "version": "2.0.0",
      },
      "path": "bar-instance",
    },
  ],
  "name": "foo-package",
}
`;

exports[`should work 2`] = `
{
  "instances": [
    {
      "info": {
        "version": "3.0.0",
      },
      "path": "bar-instance",
    },
  ],
  "name": "bar-package",
}
`;

exports[`should work 3`] = `
{
  "instances": [
    {
      "info": {
        "version": "4.0.0",
      },
      "path": "bar-instance",
    },
  ],
  "name": "foo-package",
}
`;

exports[`should work 4`] = `
{
  "info": {
    "version": "1.0.0",
  },
  "path": "foo-instance",
}
`;

exports[`should work 5`] = `
{
  "info": {
    "version": "2.0.0",
  },
  "path": "bar-instance",
}
`;

exports[`should work 6`] = `
{
  "info": {
    "version": "3.0.0",
  },
  "path": "bar-instance",
}
`;

exports[`should work 7`] = `
{
  "info": {
    "version": "4.0.0",
  },
  "path": "bar-instance",
}
`;
